Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.11.2, 5.12.0 Beta 4
-
iOS
-
-
a8729cf143a79b274c002166476c54dc152c6679 (qt/qtdeclarative/5.12)
Description
When tapping quickly outside of a TapHandler area then it can indicate that a tap was missing without being canceled/released. In the example it will give information like:
2018-11-19 13:13:05.294293+0100 untitled25[6537:7447175] [qt.quick.touch.target] QQuickTapHandler(0x10414ec50) pointId 2000001 is missing from current event, but was neither canceled nor released
Attachments
Issue Links
- is duplicated by
-
QTBUG-113005 Tap handlers are broken on Android.
-
- Closed
-
- relates to
-
QTBUG-71466 TapHandler goes in invalid state if it was released outside parent
-
- Closed
-